src/main/java/syntactic/test/failing/privateVarInStart.ru
start {
    pri String hola, que, tal;
}

/? ERROR: SINTACTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 2 | 5 | Se esperaba Sentencia pero se encontró KW_PRI: pri |